# brewly

./: .gitignore
app/src/: Main.elm  config.nucleus.json  elm-package.json  index.html
app/src/js/: app.js
app/src/styles/styleguide/: atoms.html  index.html  molecules.html  structures.html
server/: Cargo.toml  ingredients
server/src/: main.rs
server/src/models/: grain.rs
server/src/routes/: grains.rs
server/src/services/: mod.rs  sqlite.rs
