[package]
name = "server"
version = "0.1.0"
authors = ["JScearcy <jacobscearcy@gmail.com>"]

[dependencies]
iron = "*"
router = "*"
rustc-serialize = "*"
staticfile = "*"
persistent = "*"
rusqlite = "*"
time = "*"
r2d2 = "*"
r2d2_sqlite = "*"

[dependencies.mount]

git = "https://github.com/iron/mount.git"